syntax = "proto3";

package obs_remote.replay_buffer.v1;

service ReplayBufferService {
  // Gets the status of the replay buffer output.
  //
  // Original: GetReplayBufferStatus
  rpc Status(StatusRequest) returns (StatusResponse);
  // Toggles the state of the replay buffer output.
  //
  // Original: ToggleReplayBuffer
  rpc Toggle(ToggleRequest) returns (ToggleResponse);
  // Starts the replay buffer output.
  //
  // Original: StartReplayBuffer
  rpc Start(StartRequest) returns (StartResponse);
  // Stops the replay buffer output.
  //
  // Original: StopReplayBuffer
  rpc Stop(StopRequest) returns (StopResponse);
  // Saves the contents of the replay buffer output.
  //
  // Original: SaveReplayBuffer
  rpc Save(SaveRequest) returns (SaveResponse);
  // Gets the filename of the last replay buffer save file.
  //
  // Original: GetLastReplayBufferReplay
  rpc LastReplay(LastReplayRequest) returns (LastReplayResponse);
}

message StatusRequest {}

message StatusResponse {
  bool active = 1;
}

message ToggleRequest {}

message ToggleResponse {
  bool active = 1;
}

message StartRequest {}

message StartResponse {}

message StopRequest {}

message StopResponse {}

message SaveRequest {}

message SaveResponse {}

message LastReplayRequest {}

message LastReplayResponse {
  string file = 1;
}
